[package]
name = "advanced_feature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "./hello_macro" }
hello_macro_derive = { path = "./hello_macro_derive" }

[workspace]
members = ["hello_macro", "hello_macro_derive"]
